@@ -1,5 +1,6 @@
 Release 0.2.2
 - Changed $.gfx method to not render by default
+- Added some structured exceptions to PDF::Content::Ops
 Release 0.2.1
 - Tweak handling of BX .. EX compatibility blocks
 - Fix BDC op (BeginMarkedContentDict) to allow dict or name as second argument
